feat: add actions for adding event

--- a/src/app/widgets/timeline-container/active-timeline/active-timeline.component.html
+++ b/src/app/widgets/timeline-container/active-timeline/active-timeline.component.html
@@ -30,7 +30,7 @@
             [class.timeline-end]="event.changeDirection">
             <app-edit-event-form
               (changeValues$)="valuesChanges($event)"
-              (addEvent)="saveAction.emit()" />
+              (saveEvent)="saveAction.emit()" />
             <button
               class="close btn btn-circle btn-error btn-sm absolute"
               (click)="dismissAction.emit()">
