--- a/src/app/widgets/timeline-container/timeline-container.component.html
+++ b/src/app/widgets/timeline-container/timeline-container.component.html
@@ -1,4 +1,9 @@
 @if (activeTimeline() !== null) {
+  <app-confirm
+    [show]="showConfirmWindow()"
+    (confirmAction)="confirmDelete()"
+    (dismissAction)="dismissDelete()"
+    confirmMessage="Are you shure you want to delete this event?"></app-confirm>
   <app-add-event-button
     (addEvent)="addEvent()"
     [disabled]="canAddNewEvent() !== true" />
@@ -7,7 +12,8 @@
     (filterByTag)="filterByTag($event)"
     (formPreview)="updatePreview($event)"
     (saveAction)="insertEvent()"
-    (dismissAction)="dismiss()" />
+    (dismissAction)="dismiss()"
+    (onDelete)="deleteEvent($event)" />
 } @else {
   <div class="bg-lighter hero rounded-xl">
     <div class="hero-content flex-col lg:flex-row-reverse">
@@ -15,7 +21,7 @@
       <div>
         <h1 class="text-5xl font-bold">add your first personal timeline</h1>
         <p class="py-6">
-          сreate a dynamic story of your life by adding milestones, memories,
+          create a dynamic story of your life by adding milestones, memories,
           and achievements.
         </p>
         <button
