fix: move library components to app share namespace

--- a/src/app/share/modal/confirm/modal-confirm.component.html
+++ b/src/app/share/modal/confirm/modal-confirm.component.html
@@ -1,4 +1,4 @@
-<shared-ui-modal
+<app-modal
   [show]="show()"
   (onClosed)="dismissAction.emit()"
   [title]="confirmMessage()">
@@ -10,4 +10,4 @@
       confirm
     </button>
   </div>
-</shared-ui-modal>
+</app-modal>
