feat: add tags to preview

--- a/src/app/widgets/timeline-container/active-timeline/active-timeline.component.html
+++ b/src/app/widgets/timeline-container/active-timeline/active-timeline.component.html
@@ -29,7 +29,7 @@
             [class.md:text-end]="!event.changeDirection"
             [class.timeline-end]="event.changeDirection">
             <app-edit-event-form
-              (changeValues$)="valuesChanges($event)"
+              (changeValues)="valuesChanges($event)"
               (saveEvent)="saveAction.emit()" />
             <button
               class="close btn btn-circle btn-error btn-sm absolute"
