fix: fix adding event with time

--- a/src/app/widgets/timeline-container/active-timeline/edit-event-form/edit-event-form.component.html
+++ b/src/app/widgets/timeline-container/active-timeline/edit-event-form/edit-event-form.component.html
@@ -95,6 +95,7 @@
             name="time"
             type="text"
             class="input input-bordered w-20"
+            [class.input-error]="!form.controls.time.valid"
             [formControl]="form.controls.time" />
         </label>
       </div>
