--- a/src/app/widgets/timeline-container/timeline-container.component.html
+++ b/src/app/widgets/timeline-container/timeline-container.component.html
@@ -25,12 +25,26 @@
           create a dynamic story of your life by adding milestones, memories,
           and achievements.
         </p>
-        <button
-          class="btn btn-accent btn-lg text-base-content"
-          (click)="toggleAddTimelineForm()">
-          <ng-icon name="saxHierarchySquare3Outline" size="32"></ng-icon>create
-          timeline
-        </button>
+        <div class="flex w-full flex-col items-center lg:flex-row">
+          <button
+            class="btn btn-accent btn-lg me-4 text-base-content"
+            (click)="toggleAddTimelineForm()">
+            <ng-icon name="saxHierarchySquare3Outline" size="32"></ng-icon
+            >create timeline
+          </button>
+          <div class="divider lg:divider-horizontal">or</div>
+          <button
+            class="btn btn-ghost"
+            (click)="login()"
+            [attr.disabled]="isLoading() ? true : null">
+            @if (isLoading() === true) {
+              <span class="loading loading-spinner"></span>
+            } @else {
+              <ng-icon name="saxLogin1Outline" size="24"></ng-icon>
+            }
+            Authorize
+          </button>
+        </div>
       </div>
     </div>
     <app-modal [show]="showAddTimelineWindow()">
