--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -15,7 +15,10 @@
       [isAuthorized]="isAuthorized()"
       (login)="login()" />
     <app-copy-token [token]="token()" />
-    <app-profile-button [isLoading]="isLoading()" [user]="authorizedUser()" />
+    <app-profile-button
+      [isLoading]="isLoading()"
+      [user]="authorizedUser()"
+      (toProfile)="goToMy()" />
     <app-logout-button [isAuthorized]="isAuthorized()" (logout)="logout()" />
   </div>
 </div>
