refactor: rename layout selector

--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -1,5 +1,5 @@
-<app-no-authorized-layout>
+<app-layout>
   <div class="mx-auto w-full max-w-5xl pt-4">
     <app-timeline-container />
   </div>
-</app-no-authorized-layout>
+</app-layout>
