--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -1,4 +1,4 @@
-<app-no-authorized-layout>
+<app-layout>
   <div class="mx-auto w-full max-w-5xl pt-4">
     <div class="bg-lighter hero rounded-xl">
       <div class="hero-content flex-col lg:flex-row-reverse">
@@ -39,4 +39,4 @@
       </app-modal>
     </div>
   </div>
-</app-no-authorized-layout>
+</app-layout>
