--- a/src/app/pages/non-authorized/login/login-page.component.html
+++ b/src/app/pages/non-authorized/login/login-page.component.html
@@ -1,4 +1,4 @@
-<app-no-authorized-layout>
+<app-layout>
   <div
     id="g_id_onload"
     data-client_id="726286472190-n9mbol7839leajc1soh1b7p3a1tevvsi.apps.googleusercontent.com"
@@ -43,4 +43,4 @@
       </div>
     </div>
   </div>
-</app-no-authorized-layout>
+</app-layout>
