feat: add content container

--- a/src/app/share/layout/layout.component.html
+++ b/src/app/share/layout/layout.component.html
@@ -1,6 +1,8 @@
 <app-header />
 <div class="flex min-h-[calc(100vh-70px-64px)] bg-base-100">
-  <ng-content></ng-content>
+  <div class="mx-auto my-4 w-full max-w-5xl rounded-lg bg-base-200 p-4">
+    <ng-content></ng-content>
+  </div>
 </div>
 <app-notifications />
 <app-footer />
