refactor: add component for adding timelien button

--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -5,5 +5,11 @@
     </div>
   } @else {
     <app-timeline-container />
+    @if (!activeTimeline()) {
+      <app-create-timeline-button
+        [isAuthorized]="true"
+        [isLoading]="isLoading()"
+        (addTimeline)="addTimeline($event)" />
+    }
   }
 </app-layout>
