--- a/src/app/widgets/timeline-container/timeline-container.component.html
+++ b/src/app/widgets/timeline-container/timeline-container.component.html
@@ -1,16 +1,19 @@
+@if (activeTimeline()) {
+  <app-add-event-button
+    (addEvent)="addEvent()"
+    [disabled]="canAddNewEvent() !== true" />
+
+  <app-active-timeline
+    [timeline]="timeline()"
+    (filterByTag)="filterByTag($event)"
+    (formPreview)="updatePreview($event)"
+    (saveAction)="insertEvent()"
+    (dismissAction)="dismiss()"
+    (onDelete)="deleteEvent($event)" />
+}
+
 <app-modal-confirm
   [show]="showConfirmWindow()"
   (confirmAction)="confirmDelete()"
   (dismissAction)="dismissDelete()"
   confirmMessage="Are you shure you want to delete this event?"></app-modal-confirm>
-
-<app-add-event-button
-  (addEvent)="addEvent()"
-  [disabled]="canAddNewEvent() !== true" />
-<app-active-timeline
-  [timeline]="timeline()"
-  (filterByTag)="filterByTag($event)"
-  (formPreview)="updatePreview($event)"
-  (saveAction)="insertEvent()"
-  (dismissAction)="dismiss()"
-  (onDelete)="deleteEvent($event)" />
