--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -8,25 +8,29 @@
           create a dynamic story of your life by adding milestones, memories,
           and achievements.
         </p>
-        <div class="flex w-full flex-col items-center lg:flex-row">
-          <app-create-timeline-button
-            [isLarge]="true"
-            [isAuthorized]="isAuthorized()"
-            [isLoading]="isLoading()"
-            (addTimeline)="addTimeline($event)" />
+        @if (!this.isAuthorized()) {
+          <div class="flex w-full flex-col items-center lg:flex-row">
+            <app-create-timeline-button
+              [isLarge]="true"
+              [isAuthorized]="isAuthorized()"
+              [isLoading]="isLoading()"
+              (addTimeline)="addTimeline($event)" />
 
-          <div class="divider lg:divider-horizontal">or</div>
+            <div class="divider lg:divider-horizontal">or</div>
 
-          <button
-            class="btn"
-            (click)="login()"
-            [attr.disabled]="isLoading() ? true : null">
-            @if (isLoading() === true) {
-              <span class="loading loading-spinner"></span>
-            }
-            authorize
-          </button>
-        </div>
+            <button
+              class="btn"
+              (click)="login()"
+              [attr.disabled]="isLoading() ? true : null">
+              @if (isLoading() === true) {
+                <span class="loading loading-spinner"></span>
+              }
+              authorize
+            </button>
+          </div>
+        } @else {
+          <a class="btn btn-primary" href="/my">go to timeline</a>
+        }
       </div>
     </div>
     <app-modal [show]="showAddTimelineWindow()">
