--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -1,43 +1,14 @@
 <app-layout>
-  <div class="bg-lighter hero rounded-xl">
-    <div class="hero-content flex-col lg:flex-row-reverse">
-      <img src="/assets/timeline.png" class="max-w-sm" alt="timeline" />
-      <div>
-        <h1 class="text-5xl font-bold">add your first personal timeline</h1>
-        <p class="py-6">
-          create a dynamic story of your life by adding milestones, memories,
-          and achievements.
-        </p>
-        @if (!this.isAuthorized()) {
-          <div class="flex w-full flex-col items-center lg:flex-row">
-            <app-create-timeline-button
-              [isLarge]="true"
-              [isAuthorized]="isAuthorized()"
-              [isLoading]="isLoading()"
-              (addTimeline)="addTimeline($event)" />
+  <app-hero
+    [isAuthorized]="isAuthorized()"
+    [isLoading]="isLoading()"
+    (addTimeline)="addTimeline($event)"
+    (login)="login()" />
 
-            <div class="divider lg:divider-horizontal">or</div>
-
-            <button
-              class="btn"
-              (click)="login()"
-              [attr.disabled]="isLoading() ? true : null">
-              @if (isLoading() === true) {
-                <span class="loading loading-spinner"></span>
-              }
-              authorize
-            </button>
-          </div>
-        } @else {
-          <a class="btn btn-primary" href="/my">go to timeline</a>
-        }
-      </div>
-    </div>
-    <app-modal [show]="showAddTimelineWindow()">
-      <app-add-timeline
-        [isAuthorized]="isAuthorized()"
-        [isLoading]="isLoading()"
-        (addTimeline)="addTimeline($event)" />
-    </app-modal>
-  </div>
+  <app-modal [show]="showAddTimelineWindow()">
+    <app-add-timeline
+      [isAuthorized]="isAuthorized()"
+      [isLoading]="isLoading()"
+      (addTimeline)="addTimeline($event)" />
+  </app-modal>
 </app-layout>
