refactor: show timeline of project to index page

--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -5,6 +5,8 @@
     (addTimeline)="addTimeline($event)"
     (login)="login()" />
 
+  <app-timeline [timeline]="projectTimeline()"></app-timeline>
+
   <app-modal [show]="showAddTimelineWindow()">
     <app-add-timeline
       [isAuthorized]="isAuthorized()"
