fix: fix design of index page

--- a/src/app/pages/non-authorized/index/hero/hero.component.html
+++ b/src/app/pages/non-authorized/index/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="bg-lighter hero rounded-xl">
+<div class="bg-lighter hero rounded-t-xl">
   <div class="hero-content flex-col lg:flex-row-reverse">
     <img src="/assets/timeline.png" class="max-w-sm" alt="timeline" />
     <div>
