--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -5,8 +5,8 @@
     (addTimeline)="addTimeline($event)"
     (login)="login()" />
 
-  <div class="mt-4">
-    <app-content-title title="Our timeline" />
+  <div class="mx-4 mt-4">
+    <app-content-title title="Our timeline" class="text-success" />
 
     <app-timeline [timeline]="projectTimeline()"></app-timeline>
   </div>
