--- a/src/app/share/layout/layout.component.html
+++ b/src/app/share/layout/layout.component.html
@@ -1,6 +1,6 @@
 <app-header />
 <div class="flex min-h-[calc(100vh-70px-64px)] bg-base-100">
-  <div class="mx-auto my-4 w-full max-w-5xl rounded-lg bg-base-200 p-4">
+  <div class="mx-auto my-4 w-full max-w-5xl rounded-lg bg-base-200">
     <ng-content></ng-content>
   </div>
 </div>
