--- a/src/app/share/hero/hero.component.html
+++ b/src/app/share/hero/hero.component.html
@@ -1,35 +1,5 @@
 <div class="bg-lighter hero rounded-t-xl">
   <div class="hero-content flex-col lg:flex-row-reverse">
-    <img src="/assets/timeline.png" class="max-w-sm" alt="timeline" />
-    <div>
-      <h1 class="text-5xl font-bold">add your first personal timeline</h1>
-      <p class="py-6">
-        create a dynamic story of your life by adding milestones, memories, and
-        achievements.
-      </p>
-      @if (!this.isAuthorized()) {
-        <div class="flex w-full flex-col items-center lg:flex-row">
-          <app-create-timeline-button
-            [isLarge]="true"
-            [isAuthorized]="isAuthorized()"
-            [isLoading]="isLoading()"
-            (addTimeline)="addTimeline.emit($event)" />
-
-          <div class="divider lg:divider-horizontal">or</div>
-
-          <button
-            class="btn"
-            (click)="login.emit()"
-            [attr.disabled]="isLoading() ? true : null">
-            @if (isLoading() === true) {
-              <span class="loading loading-spinner"></span>
-            }
-            authorize
-          </button>
-        </div>
-      } @else {
-        <a class="btn btn-primary" href="/my">go to timeline</a>
-      }
-    </div>
+    <ng-content></ng-content>
   </div>
 </div>
