feat: add table of years component

--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -6,6 +6,7 @@
       </div>
     } @else {
       <app-timeline-container />
+      <app-table-of-years />
       @if (!activeTimeline()) {
         <app-create-timeline-button
           [isAuthorized]="true"
