--- a/src/app/widgets/table-of-years/table-of-years.component.html
+++ b/src/app/widgets/table-of-years/table-of-years.component.html
@@ -1,6 +1,16 @@
-<div class="absolute right-8 top-20 m-4 rounded-lg bg-base-200 p-4">
-  <div class="badge badge-secondary block">2024</div>
-  <div class="badge block">2023</div>
-  <div class="badge block">2022</div>
-  <div class="badge block">2021</div>
-</div>
+@if (years().length > 1) {
+  <div
+    class="absolute right-8 top-20 m-4 rounded-lg bg-base-200 p-4 opacity-45 hover:opacity-100">
+    @for (year of years(); track $index) {
+      <a
+        class="badge block cursor-pointer"
+        [class.badge-accent]="year.isActive"
+        (click)="setActiveYear(year)"
+        >{{ year.number }}</a
+      >
+      @for (del of year.delimiters; track $index) {
+        <div class="divider"></div>
+      }
+    }
+  </div>
+}
