--- a/src/app/widgets/link-preview/link-preview.component.html
+++ b/src/app/widgets/link-preview/link-preview.component.html
@@ -1,7 +1,21 @@
-@switch (previewWrapper().status) {
-  @case (Status.LOADING) {
+@if (previewHolder(); as previewHolder) {
+  @if (previewHolder.data.status === Status.ERROR) {
     <div class="flex gap-4">
-      <span class="skeleton h-32 w-32"></span>
+      <span
+        class="flex h-32 w-48 place-content-center items-center rounded-lg border-2 border-error text-warning">
+        <ng-icon name="saxWarning2Bulk" size="48" />
+      </span>
+      <span class="flex-1">
+        <div class="flex shrink flex-col gap-4">
+          <div class="font-bold">{{ previewHolder.url }}</div>
+          <div class="text-warning">{{ previewHolder.data.error }}</div>
+        </div>
+      </span>
+    </div>
+  }
+  @if (previewHolder.data.status === Status.LOADING) {
+    <div class="flex gap-4">
+      <span class="skeleton h-32 w-48"></span>
       <span class="flex-1">
         <div class="flex shrink flex-col gap-4">
           <div class="skeleton h-8 w-3/4"></div>
@@ -12,8 +26,8 @@
       </span>
     </div>
   }
-  @case (Status.SUCCESS) {
-    <div class="flex gap-4">
+  @if (previewHolder.data.status === Status.SUCCESS) {
+    <!-- <div class="flex gap-4">
       <span class="h-32 w-48"
         ><img
           src="{{ preview().image }}"
@@ -25,6 +39,6 @@
           <div>{{ preview().description }}</div>
         </div>
       </span>
-    </div>
+    </div> -->
   }
 }
